changed exception handler during adding reports, and exception handler during searching data about employee's hours